tests/fixtures/invalid/none_notin_bool.py
# Cannot use 'not in' with None and Bool
x: bool = None not in True
